# src/main/java/com/unicast/unicast_backend/persistance/model/Subject.java
@@ -16,12 +16,29 @@ import javax.persistence.Transient;
 
 import com.fasterxml.jackson.annotation.JsonIgnore;
 
+import org.hibernate.annotations.NamedQuery;
+
 import lombok.Data;
 
 @Data
 @Entity
+@NamedQuery(name = "Subject.findRanking",
+    query = "select new Subject(sum(v.score) / count(v), s) from Subject s join Video v on s.id = v.subject.id group by s.id order by sum(v.score) / count(v) desc")
 @Table(name = "subject")
 public class Subject {
+
+    public Subject() {}
+
+    public Subject(double avgScore, Subject s) {
+        this.id = s.id;
+        this.name = s.name;
+        this.abbreviation = s.abbreviation;
+        this.university = s.university;
+        this.users = s.users;
+        this.videos = s.videos;
+
+        this.avgScore = avgScore;
+    }
 
     @Id
     @GeneratedValue(strategy = GenerationType.IDENTITY)
@@ -32,7 +49,7 @@ public class Subject {
     private String abbreviation;
 
     @Transient
-    private Double points;
+    private Double avgScore;
 
     @ManyToOne
     @JoinColumn(name = "fk_university")
